# ApplyAssistV2

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: __init__.py  base.py  factory.py  types.py
backend/app/ai/prompts/: cover_letter.py  cv_adaptation.py  cv_generation.py  cv_optimisation.py  info_extraction.py
backend/app/ai/providers/: claude_provider.py  openai_provider.py
backend/app/core/: exceptions.py  security.py  supabase.py
backend/app/domains/applications/: models.py  router.py  schemas.py  service.py
backend/app/domains/documents/: cover_letter_service.py  cv_service.py  models.py  router.py  schemas.py
backend/app/domains/jobs/: models.py  router.py  schemas.py  service.py
backend/app/domains/profile/: models.py  router.py  schemas.py  service.py
backend/app/domains/profile/extraction/: agents.py  deps.py  service.py
backend/tests/: conftest.py
backend/tests/domains/: test_applications.py  test_documents.py  test_jobs.py  test_profile.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/layout/: Header.tsx  PageContainer.tsx  (+1 more)
frontend/src/config/: routes.ts
frontend/src/lib/: api.ts
frontend/src/services/: applications.service.ts  documents.service.ts  jobs.service.ts  profile.service.ts
frontend/src/store/: authStore.ts  userStore.ts
frontend/src/types/: api.ts  documents.ts  jobs.ts  profile.ts
(+23 files in other folders)
